# advent-of-code

2022/code_gleam/: README.md  gleam.toml
2022/code_gleam/src/: code_gleam.gleam  day_1.gleam  day_5.gleam
2022/code_gleam/test/: code_gleam_test.gleam  day_1_test.gleam  day_5_test.gleam
2022/elixir_code/: .gitignore  .tool-versions  README.md  mix.exs
2022/elixir_code/lib/: elixir_code.ex
2022/elixir_code/test/: elixir_code_test.exs
2022/elm_code/: elm.json
2022/elm_code/src/: Day2.elm  Day3.elm  Day4.elm  Util.elm
2022/elm_code/tests/: Day2Test.elm  Day3Test.elm  Day4Test.elm
2022/python_code/: day_1.py  pyproject.toml
2022/python_code/tests/: day_1_test.py
