[tool.poetry]
name = "python-code"
version = "0.1.0"
description = ""
authors = ["Robb Shecter <robb@public.law>"]
readme = "README.md"
packages = [{include = "python_code"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
